<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SudokuPage">

    <Chronometer
        android:id="@+id/gameTimerText"
        android:layout_width="86dp"
        android:layout_height="39dp"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SudokuPageLinearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/solveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/solve"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.987"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SudokuPageLinearLayout"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/SudokuPageLinearLayout"
        android:layout_width="407dp"
        android:layout_height="646dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="-3dp">

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="400dp"
            android:layout_height="459dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp">

            <ScrollView
                android:id="@+id/ScrollView"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="@+id/solveButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableLayout
                    android:id="@+id/sudoku_table"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toTopOf="@+id/horizontalScrollView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </ScrollView>
        </HorizontalScrollView>

        <TableLayout
            android:id="@+id/lowerHalfTableLayout"
            android:layout_width="396dp"
            android:layout_height="187dp"
            android:layout_gravity="center"
            android:layout_marginEnd="10dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>