<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string-array name="numbers_spanish">
        <item>Uno</item>
        <item>Dos</item>
        <item>Tres</item>
        <item>Cuatro</item>
        <item>Cinco</item>
        <item>Seis</item>
        <item>Siete</item>
        <item>Ocho</item>
        <item>Nueve</item>
    </string-array>

</resources>